--- a/omok/index.html
+++ b/omok/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>OMOK</h1>
+    <!--힌트
+    오목 경계에다가 돌을 두고 싶다면 테이블을 2개를 만들어서 css 에다가 포지션 absolute를 해서 테이블 교차를 시켜줌-->
+    hint : css 속성, position : absolute 를 활용
+    두개의 맵을 겹쳐서 표현할 수 있음
     <script type = "text/javascript" src = "omok.js"></script>
 </body>
 </html>
