--- a/book/book.html
+++ b/book/book.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
+    <div class = "main">
     <header>
-        <div>
+        <a href="#" onClick="top.location='javascript:location.reload()'">
                 <img src="title.png" class = "logo">
-        </div>
+        </a>
         <form class="search-box">
             <input class="query" type="text" placeholder= "검색할 책 제목" autofocus>
-            <input type="submit" value="search">
+            <input type="image" src = "search_icon.png">
         </form>
     </header>
 
@@ -29,6 +30,6 @@
 
     <footer></footer>
     <script type="text/javascript" src="book.js"></script>
+</div>
 </body>
-
 </html>
