--- a/book/book.html
+++ b/book/book.html
@@ -11,25 +11,26 @@
 </head>
 
 <body>
-    <div class = "main">
-    <header>
-        <a href="#" onClick="top.location='javascript:location.reload()'">
-                <img src="title.png" class = "logo">
-        </a>
-        <form class="search-box">
-            <input class="query" type="text" placeholder= "검색할 책 제목" autofocus>
-            <input type="image" src = "search_icon.png">
-        </form>
-    </header>
+    <div class="main">
+        <header>
+            <a href="#" onClick="top.location='javascript:location.reload()'">
+                <img src="title.png" class="logo">
+            </a>
+            <form class="search-box">
+                <input class="query" type="text" placeholder="검색할 책 제목" autofocus>
+                <input class="search_icon" type="image" src="search_icon.png">
+            </form>
+        </header>
 
-    <section>
-        <div class="container">
-            <img src="search.png" class="search-img">
-        </div>
-    </section>
+        <section>
+            <div class="container">
+                <img src="search.png" class="search-img">
+            </div>
+        </section>
 
-    <footer></footer>
-    <script type="text/javascript" src="book.js"></script>
-</div>
+        <footer></footer>
+        <script type="text/javascript" src="book.js"></script>
+    </div>
 </body>
+
 </html>
