--- a/omok/index.html
+++ b/omok/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="omok.css">
     <title>Omok</title>
 </head>
+
 <body>
-    <h1>OMOK</h1>
+    <div class="container">
+        <h1>OMOK</h1>
+        <table></table>
+    </div>
     <!--힌트
-    오목 경계에다가 돌을 두고 싶다면 테이블을 2개를 만들어서 css 에다가 포지션 absolute를 해서 테이블 교차를 시켜줌-->
-    hint : css 속성, position : absolute 를 활용
-    두개의 맵을 겹쳐서 표현할 수 있음
-    <script type = "text/javascript" src = "omok.js"></script>
+        오목 경계에다가 돌을 두고 싶다면 테이블을 2개를 만들어서 css 에다가 포지션 absolute를 해서 테이블 교차를 시켜줌-->
+    <!-- hint : css 속성, position : absolute 를 활용
+            두개의 맵을 겹쳐서 표현할 수 있음 -->
+
+    <script type="text/javascript" src="omok.js"></script>
 </body>
+
 </html>
