--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-하이
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+        p {
+            font-family: 'Gowun Dodum', sans-serif;
+        }
+
+        a{
+            text-decoration: none;
+        }
+
+        #a1 {
+            color: red;
+        }
+
+        #a2 {
+            color: orange;
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+    <title>Document</title>
+</head>
+
+<body>
+    <div>
+        <p><a id="a1" href="https://dohakim.site/omok">오모기</a></p>
+        <p><a id="a2" href="https://dohakim.site/book">책검새기</a></p>
+    </div>
+</body>
+
+</html>
