--- a/book/index.html
+++ b/book/index.html
@@ -18,7 +18,9 @@
             </a>
             <form class="search-box">
                 <input class="query" type="text" placeholder="검색할 책 제목" autofocus>
-                <input class="search_icon" type="image" src="search_icon.png">
+                <button>
+                    <img class="search_icon" src="search_icon.png">
+                </button>
             </form>
         </header>
 
