--- a/omok/index.html
+++ b/omok/index.html
@@ -14,6 +14,9 @@
     <h1>OMOK</h1>
     <table></table>
   </div>
+  <div id = "btn-container">
+    <button onclick = "reset()">reset</button>
+</div>
   <!--힌트
         오목 경계에다가 돌을 두고 싶다면 테이블을 2개를 만들어서 css 에다가 포지션 absolute를 해서 테이블 교차를 시켜줌-->
   <!-- hint : css 속성, position : absolute 를 활용
@@ -21,5 +24,4 @@
 
   <script type="text/javascript" src="omok.js"></script>
 </body>
-
 </html>
