--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <meta property="og:title" content="Porfolio">
     <meta property="og:description" content="김도하의 포트폴리오">
-    <meta property="og:image" content="resources/images/og-image.png">
+    <meta property="og:image" content="resources/images/me.png">
 
     <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/240/openmoji/338/alien-monster_1f47e.png">
     <link rel="stylesheet" href="resources/style/index.css">
-    <title>Jiyeon Kim</title>
+    <title>Doha Kim</title>
 </head>
 <body>
     <header class="mobile">
@@ -25,7 +25,7 @@
     </header>
     <div class="container">
         <header class="web">
-            <h1>Jiyeon Kim</h1>
+            <h1>Doha Kim</h1>
             <div class="projects-tag tag">
                 <span>Projects</span>
             </div>
@@ -188,7 +188,7 @@
                 <li>Email : <a target="_blank" href="mailto: sample@gmail.com">sample@gmail.com</a></li>
             </ul>
         </div>
-        <address>copyrightⓒ 2023 All rights reserved by Jiyeon Kim.</address>
+        <address>copyrightⓒ 2023 All rights reserved by Doha Kim.</address>
     </footer>
     <script type="text/javascript" src="resources/script/index.js"></script>
 </body>
