--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <hr>
                 <div class="frontend"></div>
             </section>
-            <section class="interests">
+            <!--<section class="interests">
                 <article>
                     <a href="about blank">
                         <div class="likes-img"></div>
@@ -178,14 +178,14 @@
                     </a>
                     <h6>나를 소개하는 관심사</h6>
                 </article>
-            </section>
+            </section>-->
         </div>
     </div>
     <footer>
         <div class="info">
             <ul>
                 <li>Location : Seoul, Korea</li>
-                <li>Email : <a target="_blank" href="mailto: sample@gmail.com">sample@gmail.com</a></li>
+                <li>Email : <a target="_blank" href="mailto: 8772158@gmail.com">8772158@gmail.com</a></li>
             </ul>
         </div>
         <address>copyrightⓒ 2023 All rights reserved by Doha Kim.</address>
