--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </article>
             </section>
             <section class="projects">
-                <!-- <div class="backend">
+                <div class="backend">
                     <article class="project-name">
                         <a target="_blank" href="about:blank">
                             <div class="project-img"></div>
@@ -137,7 +137,7 @@
                         </div>
                         <span class="period">2023.04.01 ~ 2023.04.10</span>
                     </article>
-                </div> -->
+                </div>
                 <hr>
                 <div class="frontend"></div>
             </section>
