--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <meta property="og:title" content="Porfolio">
     <meta property="og:description" content="김도하의 포트폴리오">
     <meta property="og:image" content="resources/images/me.png">
-    <meta property="og:image" content="https://ca.slack-edge.com/T04G0MW4EKC-U04GTANRT1N-e5909d8c6bd8-512">
 
     <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/240/openmoji/338/alien-monster_1f47e.png">
-    <link rel="shortcut icon" href="resources\images\me.png">
     <link rel="stylesheet" href="resources/style/index.css">
     <title>Doha Kim</title>
 </head>
@@ -39,7 +37,6 @@
             <section>
                 <article class="profile">
                     <img src="/resources/images/yao.gif">
-                    <img src="/resources/images/me.png">
                     <ul>
                         <li>
                             <h4>I am</h4>
@@ -92,7 +89,6 @@
             </section>
             <section class="projects">
                 <div class="backend">
-                <!-- <div class="backend">
                     <article class="project-name">
                         <a target="_blank" href="about:blank">
                             <div class="project-img"></div>
@@ -142,7 +138,6 @@
                         <span class="period">2023.04.01 ~ 2023.04.10</span>
                     </article>
                 </div>
-                </div> -->
                 <hr>
                 <div class="frontend"></div>
             </section>
@@ -190,7 +185,7 @@
         <div class="info">
             <ul>
                 <li>Location : Seoul, Korea</li>
-                <li>Email : <a target="_blank" href="mailto: 8772158@gmail.com">8772158@gmail.com</a></li>
+                <li>Email : <a target="_blank" href="mailto: 8772158@naver.com">8772158@naver.com</a></li>
             </ul>
         </div>
         <address>copyrightⓒ 2023 All rights reserved by Doha Kim.</address>
@@ -198,3 +193,4 @@
     <script type="text/javascript" src="resources/script/index.js"></script>
 </body>
 </html>
+
