--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <hr>
                 <div class="frontend"></div>
             </section>
-            <!-- <section class="interests">
+            <section class="interests">
                 <article>
                     <a href="about blank">
                         <div class="likes-img"></div>
@@ -178,7 +178,7 @@
                     </a>
                     <h6>나를 소개하는 관심사</h6>
                 </article>
-            </section> -->
+            </section>
         </div>
     </div>
     <footer>
