--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
             <section class="projects">
                 <div class="backend">
-                    <article class="project-name">
+                    <!-- <article class="project-name">
                         <a target="_blank" href="about:blank">
                             <div class="project-img"></div>
                         </a>
@@ -136,12 +136,12 @@
                             <span>REST API</span>
                         </div>
                         <span class="period">2023.04.01 ~ 2023.04.10</span>
-                    </article>
+                    </article> -->
                 </div>
                 <hr>
                 <div class="frontend"></div>
             </section>
-            <section class="interests">
+            <!-- <section class="interests">
                 <article>
                     <a href="about blank">
                         <div class="likes-img"></div>
@@ -178,7 +178,7 @@
                     </a>
                     <h6>나를 소개하는 관심사</h6>
                 </article>
-            </section>
+            </section> -->
         </div>
     </div>
     <footer>
