--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <hr>
                 <div class="frontend"></div>
             </section>
-            <!-- <section class="interests">
-                <article>
+            <section class="interests">
+                <!-- <article>
                     <a href="about blank">
                         <div class="likes-img"></div>
                     </a>
@@ -177,8 +177,8 @@
                         <div class="likes-img"></div>
                     </a>
                     <h6>나를 소개하는 관심사</h6>
-                </article>
-            </section> -->
+                </article> -->
+            </section>
         </div>
     </div>
     <footer>
