프로젝트, interest 추가

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,12 @@
 
     <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/240/openmoji/338/alien-monster_1f47e.png">
     <link rel="stylesheet" href="resources/style/index.css">
-    <title>Doha Kim</title>
+    <title>Developer Doha Kim</title>
 </head>
+
 <body>
     <header class="mobile">
-        <h1>Doha Kim</h1>
+        <h1>Developer Doha Kim</h1>
         <div class="projects-tag tag">
             <span>Projects</span>
         </div>
@@ -25,7 +27,7 @@
     </header>
     <div class="container">
         <header class="web">
-            <h1>Doha Kim</h1>
+            <h1>Developer Doha Kim</h1>
             <div class="projects-tag tag">
                 <span>Projects</span>
             </div>
@@ -48,11 +50,13 @@
                             <h4>Skills</h4>
                             <ul>
                                 <li>Java</li>
-                                <li>JSP</li>
-                                <li>Spring Boot</li>
-                                <li>SQL</li>
-                                <li>JPA</li>
+                                <li>Spring</li>
                                 <li>JavaScript</li>
+                                <li>Vue</li>
+                                <li>JPA</li>
+                                <li>SQL</li>
+                                <li>JSP</li>
+                                <li>node.js</li>
                                 <li>jQuery</li>
                                 <li>HTML5</li>
                                 <li>CSS3</li>
@@ -63,6 +67,7 @@
                         <li>
                             <h4>Education</h4>
                             <ul>
+                                <li>2023.07.01 ~ : SSAFY 10기 과정 이수</li>
                                 <li>2022.12.21 ~ 2023.05.15 : 자바(JAVA) 웹개발 프로그래밍 과정 수료</li>
                             </ul>
                         </li>
@@ -136,25 +141,29 @@
                 <div class="frontend"></div>
             </section>
             <section class="interests">
+                <article>
+                    <div class="likes-img"
+                        style='background-image: url("resources/images/write.jpg"); background-size: contain; background-position: center;'>
+                    </div>
+                    <h6 style="background-color: white;">&nbsp;I am also a writer</h6>
+                </article>
+                <article>
+                    <div class="likes-img"
+                        style='background-image: url("resources/images/photo.jpg"); background-size: contain;'></div>
+                    <h6 style="background-color: white;">&nbsp;I am also a photographer</h6>
+                </article>
+                <article style="height: 27.5vh;">
+                    <div class="likes-img"
+                        style='background-image: url("https://i.namu.wiki/i/TBEGhVKOm18k78Ni3B6fPoOB33vJCpiwLnd5lU9CSZ19fIzU3B1-VmSMqL7RwqkrvlADkY2Vti3IeQIpGlVLBg.webp"); background-size: contain; height: 95%;'>
+                    </div>
+                    <h6 style="background-color: white;">&nbsp;I am also a philosophee</h6>
+                </article>
+                <article>
+                    <div class="likes-img"
+                        style='background-image: url("resources/images/music.jpg"); background-size: contain;'></div>
+                    <h6 style="background-color: white;">&nbsp;I am also a listener</h6>
+                </article>
                 <!-- <article>
-                    <a href="about blank">
-                        <div class="likes-img"></div>
-                    </a>
-                    <h6>나를 소개하는 관심사</h6>
-                </article>
-                <article>
-                    <a href="about blank">
-                        <div class="likes-img"></div>
-                    </a>
-                    <h6>나를 소개하는 관심사</h6>
-                </article>
-                <article>
-                    <a href="about blank">
-                        <div class="likes-img"></div>
-                    </a>
-                    <h6>나를 소개하는 관심사</h6>
-                </article>
-                <article>
                     <a href="about blank">
                         <div class="likes-img"></div>
                     </a>
@@ -186,5 +195,5 @@
     </footer>
     <script type="text/javascript" src="resources/script/index.js"></script>
 </body>
-</html>
 
+</html>
