[feat] 프로젝트 디테일 추가

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                                 <li>JavaScript</li>
                                 <li>Vue</li>
                                 <li>JPA</li>
+                                <li>myBatis</li>
                                 <li>SQL</li>
                                 <li>JSP</li>
                                 <li>node.js</li>
@@ -74,6 +75,7 @@
                         <li>
                             <h4>Certificates</h4>
                             <ul>
+                                <li>SQLD(2023)</li>
                                 <li>정보처리기사 필기(2023)</li>
                             </ul>
                         </li>
@@ -88,6 +90,7 @@
             </section>
             <section class="projects">
                 <div class="backend">
+                    <p class="project-type">BACK-END</p>
                     <!-- <article class="project-name">
                         <a target="_blank" href="about:blank">
                             <div class="project-img"></div>
@@ -138,7 +141,13 @@
                     </article> -->
                 </div>
                 <hr>
-                <div class="frontend"></div>
+                <div class="backend-mini">
+                    <p class="project-type">BACK-END mini</p>
+                </div>
+                <hr>
+                <div class="frontend">
+                    <p class="project-type">FRONT-END</p>
+                </div>
             </section>
             <section class="interests">
                 <article>
@@ -188,7 +197,8 @@
         <div class="info">
             <ul>
                 <li>Location : Seoul, Korea</li>
-                <li>Email : <a target="_blank" href="mailto: 8772158@naver.com">8772158@naver.com</a></li>
+                <li>Email : <a target="_blank" href="mailto:8772158@naver.com">8772158@naver.com</a></li>
+                <li>Phone : <a target="_blank" href="tel:010-8019-2156">010-8019-2156</a></li>
             </ul>
         </div>
         <address>copyrightⓒ 2023 All rights reserved by Doha Kim.</address>
