[feat] 블로그 추가

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                             <ul>
                                 <li>Java Developer</li>
                             </ul>
+                            <h4>Blog</h4>
+                            <ul>
+                                <li><a href="https://sendmeariver.tistory.com/">https://sendmeariver.tistory.com</a></li>
+                                <li><a href="https://doha-obsidianblog.vercel.app">https://doha-obsidianblog.vercel.app</a></li>
+                                <li><a href="https://writerdoha.netlify.app">https://writerdoha.netlify.app</a></li>
+                            </ul>
                         </li>
                         <li>
                             <h4>Skills</h4>
