블로그 추가

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                             <ul>
                                 <li>Java Developer</li>
                             </ul>
-                            <h4>Blog</h4>
+                            <h4>Blog(수정 중)</h4>
                             <ul>
-                                <li><a href="https://sendmeariver.tistory.com/">https://sendmeariver.tistory.com</a></li>
-                                <li><a href="https://doha-obsidianblog.vercel.app">https://doha-obsidianblog.vercel.app</a></li>
-                                <li><a href="https://writerdoha.netlify.app">https://writerdoha.netlify.app</a></li>
+                                <li><a href="https://sendmeariver.tistory.com/">티스토리 블로그</a></li>
+                                <li><a href="https://doha-obsidianblog.vercel.app">obsidian 공부 노트</a></li>
+                                <li><a href="https://writerdoha.netlify.app">글 블로그(공부 노트에 해당 양식을 적용할 예정입니다)</a></li>
                             </ul>
                         </li>
                         <li>
