블로그 수정

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                             </ul>
                             <h4>Blog(수정 중)</h4>
                             <ul>
-                                <li><a href="https://sendmeariver.tistory.com/">티스토리 블로그</a></li>
-                                <li><a href="https://doha-obsidianblog.vercel.app">obsidian 공부 노트</a></li>
-                                <li><a href="https://writerdoha.netlify.app">글 블로그(공부 노트에 해당 양식을 적용할 예정입니다)</a></li>
+                                <li><a href="https://doha-obsidian-blog.vercel.app/">obsidian 공부/글 블로그</a></li>
                             </ul>
                         </li>
                         <li>
