--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                     </article> -->
                 </div>
                 <hr>
-                <div class="backend-mini">
+                <!-- <div class="backend-mini">
                     <p class="project-type">BACK-END mini</p>
                 </div>
                 <hr>
                 <div class="frontend">
                     <p class="project-type">FRONT-END</p>
-                </div>
+                </div> -->
             </section>
             <section class="interests">
                 <article>
