--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     <link rel="shortcut icon" href="https://em-content.zobj.net/thumbs/240/openmoji/338/alien-monster_1f47e.png">
     <link rel="stylesheet" href="resources/style/index.css">
-    <title>Developer Doha Kim</title>
+    <title>Kim Doha Portfolio</title>
 </head>
 
 <body>
     <header class="mobile">
-        <h1>Developer Doha Kim</h1>
+        <h1>Kim Doha Portfolio</h1>
         <div class="projects-tag tag">
             <span>Projects</span>
         </div>
@@ -27,7 +27,7 @@
     </header>
     <div class="container">
         <header class="web">
-            <h1>Developer Doha Kim</h1>
+            <h1>Kim Doha Portfolio</h1>
             <div class="projects-tag tag">
                 <span>Projects</span>
             </div>
@@ -43,9 +43,9 @@
                         <li>
                             <h4>I am</h4>
                             <ul>
-                                <li>Java Developer</li>
+                                <li>Backend Developer</li>
                             </ul>
-                            <h4>Blog(수정 중)</h4>
+                            <h4>Blog</h4>
                             <ul>
                                 <li><a href="https://doha-obsidian-blog.vercel.app/">obsidian 공부/글 블로그</a></li>
                             </ul>
@@ -67,13 +67,22 @@
                                 <li>CSS3</li>
                                 <li>AWS</li>
                                 <li>Git</li>
+                                <li>Jenkins</li>
+                                <li>Kafka</li>
+                                <li>Redis</li>
+                                <li>Docker</li>
                             </ul>
                         </li>
                         <li>
                             <h4>Education</h4>
+                            <h6>학위 과정</h6>
                             <ul>
-                                <li>2023.07.01 ~ : SSAFY 10기 과정 이수</li>
-                                <li>2022.12.21 ~ 2023.05.15 : 자바(JAVA) 웹개발 프로그래밍 과정 수료</li>
+                                <li>2016.03 ~ 2021.08 경희대학교 문과대 철학과 졸업</li>
+                            </ul>
+                            <h6>비학위 과정</h6>
+                            <ul>
+                                <li>2023.07.01 ~ 현재: 삼성청년SW아카데미(SSAFY) 10기 과정 수료(1600시간)</li>
+                                <li>2022.12.21 ~ 2023.05.15 : 자바(JAVA) 웹개발 프로그래밍 과정 수료(800시간)</li>
                             </ul>
                         </li>
                         <li>
