--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
 <body>
     <header class="mobile">
+        <div>
         <h1>Kim Doha Portfolio</h1>
+        <h4>👑개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
+        </div>
+        <div class="profile-tag tag">
+            <span>Profile</span>
+        </div>
         <div class="projects-tag tag">
             <span>Projects</span>
         </div>
@@ -27,7 +33,13 @@
     </header>
     <div class="container">
         <header class="web">
+            <div>
             <h1>Kim Doha Portfolio</h1>
+            <h4>👑개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
+            </div>
+            <div class="profile-tag tag">
+                <span>Profile</span>
+            </div>
             <div class="projects-tag tag">
                 <span>Projects</span>
             </div>
@@ -36,68 +48,88 @@
             </div>
         </header>
         <div class="contents">
-            <section>
+            <section class="profile-section">
                 <article class="profile">
-                    <!-- <img src="/resources/images/me.png"> -->
+                    <img src="/resources/images/증명사진.jpg">
                     <ul>
                         <li>
-                            <h4>I am</h4>
+                            <h4>😊 I am</h4>
                             <ul>
                                 <li>Backend Developer</li>
                             </ul>
-                            <h4>Blog</h4>
+                            <h4>🎂 Birth</h4>
                             <ul>
-                                <li><a href="https://doha-obsidian-blog.vercel.app/">obsidian 공부/글 블로그</a></li>
+                                <li>1997.04.10</li>
+                            </ul>
+                            <h4>✉️ E-Mail</h4>
+                            <ul>
+                                <li>dorong0205@gmail.com</li>
+                            </ul>
+                            <h4>🐱 Github</h4>
+                            <ul>
+                                <li><a href="https://github.com/KimDohaAcc">github.com/KimDohaAcc</a></li>
+                            </ul>
+                            <h4>💾 Tech & Writing Blog</h4>
+                            <ul>
+                                <li><a href="https://doha-obsidian-blog.vercel.app/">doha-obsidian-blog.vercel.app</a></li>
+                            </ul>
+                            <h4>🎒 Activities</h4>
+                            <ul>
+                                <li><b>삼성청년SW아카데미(SSAFY) 10기 수료</b><br>
+                                    SW 필수 지식과 알고리즘 중심의 교육<br>
+                                    및 프로젝트 수행 과정<br>
+                                    <i>2023.07.01 ~ 현재(1600시간)</i>
+                                </li>
+                                <li><b>자바(JAVA) 웹개발 프로그래밍 과정 수료</b><br>
+                                    Java 기반 학습 및 프로젝트 수행 과정<br>
+                                    <i>2022.12.21 ~ 2023.05.15(800시간)</i>
+                                </li>
                             </ul>
                         </li>
                         <li>
-                            <h4>Skills</h4>
+                            <h4>⛏️ Skills</h4>
+                            <h4>많이 해봤어요</h4>
                             <ul>
-                                <li>Java</li>
-                                <li>Spring</li>
+                                <li style="color: coral; font-weight: bold;">Java</li>
+                                <li style="color: coral; font-weight: bold;">SpringBoot</li>
                                 <li>JavaScript</li>
-                                <li>Vue</li>
                                 <li>JPA</li>
-                                <li>myBatis</li>
-                                <li>SQL</li>
+                                <li>MySQL</li>
+                                <li>MariaDB</li>
+                                <li>MongoDB</li>
+                                <li>Kafka</li>
+                                <li>Docker</li>
                                 <li>JSP</li>
-                                <li>node.js</li>
-                                <li>jQuery</li>
-                                <li>HTML5</li>
-                                <li>CSS3</li>
                                 <li>AWS</li>
                                 <li>Git</li>
                                 <li>Jenkins</li>
-                                <li>Kafka</li>
+                            </ul>
+                            <h4>해본 적 있어요</h4>
+                            <ul>
+                                <li>python</li>
+                                <li>Vue</li>
+                                <li>myBatis</li>
+                                <li>node.js</li>
+                                <li>tensorflow</li>
+                                <li>Oracle</li>
                                 <li>Redis</li>
-                                <li>Docker</li>
+                                <li>HTML5</li>
+                                <li>CSS3</li>
                             </ul>
                         </li>
                         <li>
-                            <h4>Education</h4>
-                            <h6>학위 과정</h6>
+                            <h4>📖 Education</h4>
                             <ul>
-                                <li>2016.03 ~ 2021.08 경희대학교 문과대 철학과 졸업</li>
-                            </ul>
-                            <h6>비학위 과정</h6>
-                            <ul>
-                                <li>2023.07.01 ~ 현재: 삼성청년SW아카데미(SSAFY) 10기 과정 수료(1600시간)</li>
-                                <li>2022.12.21 ~ 2023.05.15 : 자바(JAVA) 웹개발 프로그래밍 과정 수료(800시간)</li>
+                                <li>2016.03 ~ 2021.08 Kyunghee Univ. Philosophy</li>
                             </ul>
                         </li>
                         <li>
-                            <h4>Certificates</h4>
+                            <h4>🏅 Certificates</h4>
                             <ul>
                                 <li>SQLD(2023)</li>
                                 <li>정보처리기사 필기(2023)</li>
                             </ul>
                         </li>
-                        <!-- <li>
-                            <h4>Experience</h4>
-                            <ul>
-                                <li>2022.08 ~ 2023.05 : Java Instructor</li>
-                            </ul>
-                        </li> -->
                     </ul>
                 </article>
             </section>
@@ -210,7 +242,7 @@
         <div class="info">
             <ul>
                 <li>Location : Seoul, Korea</li>
-                <li>Email : <a target="_blank" href="mailto:8772158@naver.com">8772158@naver.com</a></li>
+                <li>Email : <a target="_blank" href="mailto:dorong0205@gmail.com">dorong0205@gmail.com</a></li>
                 <li>Phone : <a target="_blank" href="tel:010-8019-2156">010-8019-2156</a></li>
             </ul>
         </div>
