--- a/mommyletter.html
+++ b/mommyletter.html
@@ -47,27 +47,45 @@
         </section>
         <section class="project-description">
             <h2>📖 프로젝트 소개</h2>
-            <p>아이중심적인 대다수의 임산부 어플과 달리 산모중심의 SNS 어플을 개발하고자 하였습니다.</p>
+            <p>아이중심적인 대다수의 임산부 어플과 달리 임산부 중심의 SNS 어플</p>
             <br>
-            <p><strong>주요 기능</strong></p>
+            <p>특히 임산부의 90%에게서 발생하는 산후우울감 및 산후우울증을 관리할 수 있는 서비스를 집중적으로 구상</p>
+            <br>
+            <p>육아일기 및 임산부 일기를 작성하여 자신의 감정을 되돌아볼 수 있는 감정 다이어리</p>
+            <br>
+            <p>피드, 채팅 좋아요, 댓글, 팔로우 기능을 제공해 임산부끼리 소통할 수 있는 SNS</p>
+            <br>
+            <p>거동이 불편한 임산부가 정신과 진료 예약, 비대면 화상 진료, 처방전 발급이 가능한 비대면 진료 서비스</p>
+            <br>
+            <p>수유실 정보 API를 활용한 수유실 지도</p>
+            <br>
+            <p><strong>기술 특장점</strong></p>
             <ul>
-                <li>산모 / 육아일기를 작성할 수 있는 다이어리</li>
-                <li>피드, 채팅 좋아요, 댓글, 팔로우 기능을 제공하는 SNS</li>
-                <li>진료 예약, 비대면 화상 진료, 처방전 발급</li>
+                <li>원하는 의사를 통하여 진료 예약이 가능하며, 의사는 권한을 허락한 사용자의 감정 일기를 열람하여 진료에 참고할 수 있습니다.</li>
+                <li>진료 후 처방전을 발급하여 의약품을 처방 받을 수 있습니다.</li>
+                <li>감정 일기는 산모 일기 / 육아 일기로 나누어지며 토글을 클릭하여 간편하게 전환할 수 있습니다.</li>
+                <li>오늘의 감정은 이모지를 통해 간단히 작성할 수 있습니다. 이모지의 감정을 분석하여 기간별 감정 그래프 및 통계를 제공합니다.</li>
+                <li>SNS를 통해 다른 임산부들과 소통하며 정보를 얻거나 감정을 공유할 수 있습니다.</li>
             </ul>
             <br>
             <p><strong>UI</strong></p>
-            <img class="ui" src="resources/images/마미레터 UI.png" alt="프로젝트 이미지">
+            <img class="ui" src="resources/images/mom_ui.png" alt="프로젝트 이미지">
             <br>
             <h2>🙋‍♂️ 담당 역할</h2>
-            <p>DirectMessage, GroupChat, 화상 통화, 피드, 댓글, 좋아요, 해시태그</p>
+            <p>DirectMessage, GroupChat, 화상 통화, 피드, 댓글, 좋아요, 해시태그 구현</p>
+            <br>
+            <h2>🎠 ERD</h2>
+            <img  class="ui" src="resources/images/mom_erd.png">
+            <br><br>
+            <h2>🧵 시스템 아키텍처</h2>
+            <img  class="ui" src="resources/images/mom_arc.png">
+            <br>
             <br>
             <h2>🎯 기술 리뷰</h2>
+            <br>
             <p>[Kafka 및 MongoDB를 활용한 실시간 DirectMessage 구현]</p>
-            <p>Kafka를 사용하여 메시지 큐 및 이벤트 스트리밍을 구현하고, MongoDB를 데이터 저장 및 관리에 활용하여 안정적이고 확장 가능한 채팅 애플리케이션을 개발했습니다. 또한 STOMP를
-                사용하여 WebSocket을 통해 실시간 통신을 구현하여 사용자 간의 채팅을 가능하게 했습니다.</p>
-            <p>프로젝트 중반에 그룹 채팅 기능을 만들게 되었습니다. 이미 Kafka 설정을 DM에 맞게 해둔 터라 설정 및 리스너를 변경해야 했습니다. 팀원들과 상의하여 DM과 그룹 채팅의 컨슈머를
-                분리하고 토픽을 새로 구성하여 성공적으로 그룹 채팅 기능까지 구현할 수 있었습니다.</p>
+            <p>Kafka를 사용하여 메시지 큐 및 이벤트 스트리밍을 구현하고, MongoDB를 데이터 저장 및 관리에 활용하여 안정적이고 확장 가능한 채팅 애플리케이션을 개발했습니다. 또한 STOMP를 사용하여 WebSocket을 통해 실시간 통신을 구현하여 사용자 간의 채팅을 가능하게 했습니다.</p>
+            <p>1:1 채팅 기능을 개발하던 중, 중반에 그룹채팅 기능을 추가해야 하는 상황이 발생했습니다. 저는 엔티티 설계를 고민하고 Kafka 관련 문서를 탐독하며 개념을 심도 있게 이해하고자 노력했습니다. 그룹채팅이 사용자 수만 다를 뿐 기존 채팅과 동일한 서비스가 요구된다는 걸 파악한 후 엔티티를 단일화하였습니다. 또한 Kafka 토픽을 1:1 채팅용과 그룹채팅용으로 분리한 후 메시지 리스너 코드를 수정하여 두 기능 모두에 Kafka를 성공적으로 적용할 수 있었습니다.</p>
         </section>
     </div>
 </body>
