--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <header class="mobile">
         <div>
-        <h1>Kim Doha Portfolio</h1>
-        <h4>👑개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
+            <h1>Kim Doha Portfolio</h1>
+            <h4>개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
         </div>
         <div class="profile-tag tag">
             <span>Profile</span>
@@ -34,8 +34,8 @@
     <div class="container">
         <header class="web">
             <div>
-            <h1>Kim Doha Portfolio</h1>
-            <h4>👑개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
+                <h1>Kim Doha Portfolio</h1>
+                <h4>개발에 대한 열정과 논리적 사고력을 가진 백엔드 개발자 김도하 입니다</h4>
             </div>
             <div class="profile-tag tag">
                 <span>Profile</span>
@@ -71,7 +71,8 @@
                             </ul>
                             <h4>💾 Tech & Writing Blog</h4>
                             <ul>
-                                <li><a href="https://doha-obsidian-blog.vercel.app/">doha-obsidian-blog.vercel.app</a></li>
+                                <li><a href="https://doha-obsidian-blog.vercel.app/">doha-obsidian-blog.vercel.app</a>
+                                </li>
                             </ul>
                             <h4>🎒 Activities</h4>
                             <ul>
@@ -88,33 +89,102 @@
                         </li>
                         <li>
                             <h4>⛏️ Skills</h4>
-                            <h4>많이 해봤어요</h4>
                             <ul>
-                                <li style="color: coral; font-weight: bold;">Java</li>
-                                <li style="color: coral; font-weight: bold;">SpringBoot</li>
-                                <li>JavaScript</li>
-                                <li>JPA</li>
-                                <li>MySQL</li>
-                                <li>MariaDB</li>
-                                <li>MongoDB</li>
-                                <li>Kafka</li>
-                                <li>Docker</li>
-                                <li>JSP</li>
-                                <li>AWS</li>
-                                <li>Git</li>
-                                <li>Jenkins</li>
-                            </ul>
-                            <h4>해본 적 있어요</h4>
-                            <ul>
-                                <li>python</li>
-                                <li>Vue</li>
-                                <li>myBatis</li>
-                                <li>node.js</li>
-                                <li>tensorflow</li>
-                                <li>Oracle</li>
-                                <li>Redis</li>
-                                <li>HTML5</li>
-                                <li>CSS3</li>
+                                <!-- 언어 (Languages) -->
+                                <li style="font-weight: bold;">Languages</li>
+                                <ul>
+                                    <li style="color: rgb(3, 199, 144); font-weight: bold;">Java
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>JavaScript
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Python
+                                        <span class="skill-level">★★☆☆☆</span>
+                                    </li>
+                                </ul>
+
+                                <!-- 프레임워크 (Frameworks) -->
+                                <li style="font-weight: bold;">Frameworks</li>
+                                <ul>
+                                    <li style="color: rgb(3, 199, 144); font-weight: bold;">SpringBoot
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>JPA
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>myBatis
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Vue
+                                        <span class="skill-level">★★☆☆☆</span>
+                                    </li>
+                                </ul>
+
+                                <!-- 데이터베이스 (Databases) -->
+                                <li style="font-weight: bold;">Databases</li>
+                                <ul>
+                                    <li>MySQL
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>MariaDB
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>MongoDB
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>Oracle
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Redis
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Elasticsearch
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                </ul>
+
+                                <!-- 메시지 브로커 (Message Brokers) -->
+                                <li style="font-weight: bold;">Message Brokers</li>
+                                <ul>
+                                    <li>Kafka
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>RabbitMQ
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                </ul>
+
+                                <!-- 도구 및 플랫폼 (Tools and Platforms) -->
+                                <li style="font-weight: bold;">Tools and Platforms</li>
+                                <ul>
+                                    <li>Docker
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>AWS
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Git
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>Jenkins
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                </ul>
+
+                                <!-- 웹 기술 (Web Technologies) -->
+                                <li style="font-weight: bold;">Web Technologies</li>
+                                <ul>
+                                    <li>JSP
+                                        <span class="skill-level">★★★★☆</span>
+                                    </li>
+                                    <li>HTML5
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                    <li>CSS3
+                                        <span class="skill-level">★★★☆☆</span>
+                                    </li>
+                                </ul>
                             </ul>
                         </li>
                         <li>
@@ -135,7 +205,6 @@
             </section>
             <section class="projects">
                 <div class="backend">
-                    <p class="project-type">BACK-END</p>
                     <!-- <article class="project-name">
                         <a target="_blank" href="about:blank">
                             <div class="project-img"></div>
